<resources>
    <string name="app_name">Health Management</string>
    <string name="registar_paciente">Registar paciente</string>


    <string name="sexo">Sexo:</string>
    <string name="masculino">Masculino</string>
    <string name="feminino">Feminino</string>

    <string name="contacto_de_emergencia">Contacto de emergencia:</string>
    <string name="numero_de_cart_o_de_cidad_o">Numero de cartão de cidadão:</string>

    <string name="submeter">Submeter</string>
    <string name="descri_o_dos_sintomas">Descrição dos sintomas:</string>
    <string name="campos_a_preencher">Campos a preencher:</string>

    <string name="profissional_de_saude_responsav_l">Profissional de saude responsavél:</string>
    <string name="morada">Morada:</string>
    <string name="numero_de_cc">Numero de cc:</string>
    <string name="detalhes_dos_sintomas">Detalhes dos sintomas:</string>
    <string name="sintomas">Sintomas:</string>
    <string name="contacto_de_emerg_ncia">Contacto de emergência:</string>
    <string name="data_de_nascimento">Data de nascimento:</string>
    <string name="g_nero">Género:</string>
    <string name="idade">Idade:</string>
    <string name="nome">Nome:</string>
    <string name="dados_do_paciente">Dados do Paciente</string>
    <string name="fun_o_a_exercer">Função a exercer:</string>
    <string name="tratamento">Tratamento:</string>
    <string name="medica_o">Medicação:</string>
    <string name="regime_alimentar">Regime alimentar:</string>
    <string name="outros_procedimentos">Outros procedimentos</string>
    <string name="data_de_entrada_no_servi_o_hospitalar">Data de entrada no serviço hospitalar:</string>
    <string name="spinner_title" />
    <string name="estado_clinico">Estado clinico:</string>
    <string name="Pouco_urgente">Pouco urgente</string>
    <string name="urgente">Urgente</string>
    <string name="Muito_urgente">Muito Urgente</string>
    <string name="emergente">Emergente</string>
    <string name="adicionar">Adicionar</string>
    <string name="observa_es">Observações:</string>
    <string name="ficha_do_paciente">Ficha do paciente:</string>
    <string name="contacto">Contacto:</string>
    <string name="data_de_inicio_do_tratamento">Data de inicio do tratamento:</string>
    <string name="data_de_entrada_no_hospital">Data de entrada no hospital:</string>
    <string name="title_activity_principal_activity">Principal_activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="registar">Registar</string>
</resources>
