<?xml version="1.0" encoding="utf-8"?>
    <ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/registar_paciente"
        android:textSize="20sp"
        android:textColor="#191970"
        app:layout_constraintBottom_toBottomOf="parent" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="#00008B" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/nome"
        android:textColor="#000000"
        android:textSize="16sp" />

    <EditText

        android:layout_marginTop="8dp"
        android:id="@+id/nome_paciente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:text="" />

    <TextView
        android:textColor="#000000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/idade"
        android:textSize="16sp" />

    <EditText
        android:layout_marginTop="8dp"
        android:id="@+id/idade_paciente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberSigned"
        android:text="" />

    <TextView
        android:textColor="#000000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/sexo"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="30dp"
        android:layout_marginTop="8dp">

        <CheckBox
            android:id="@+id/masculino"
            android:textColor="#000000"
            android:layout_width="110dp"
            android:layout_height="25dp"
            android:textSize="16sp"

            android:text="@string/masculino" />

        <CheckBox
            android:id="@+id/feminino"
            android:textColor="#000000"
            android:textSize="16sp"
            android:layout_width="105dp"
            android:layout_height="25dp"

            android:layout_marginStart="40dp"
            android:text="@string/feminino" />
    </LinearLayout>

    <TextView
        android:layout_marginTop="15dp"
        android:textColor="#000000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/data_de_nascimento"
        android:textSize="16sp" />

    <EditText
        android:layout_marginTop="8dp"
        android:id="@+id/data_nascimento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:text="" />

    <TextView
        android:textColor="#000000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/contacto_de_emergencia"
        android:textSize="16sp" />

    <EditText
        android:layout_marginTop="8dp"
        android:id="@+id/contacto_emergencia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberSigned"
        android:text="" />

    <TextView
        android:textColor="#000000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/numero_de_cart_o_de_cidad_o"
        android:textSize="16sp" />

    <EditText
        android:layout_marginTop="8dp"
        android:id="@+id/numero_cc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberSigned"
        android:text="" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="#00008B" />

    <TextView
        android:textColor="#000000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/sintomas"
        android:textSize="16sp" />

    <EditText
        android:layout_marginTop="8dp"
        android:id="@+id/sintomas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:text="" />

    <TextView
        android:textColor="#000000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/descri_o_dos_sintomas"
        android:textSize="16sp" />

    <EditText
        android:layout_marginTop="8dp"
        android:id="@+id/descricao_sintomas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:text="" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Submeter"
        android:background="@drawable/button1_background"
        android:padding="24dp"
        android:text="@string/submeter"
        android:textColor="#191970"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:onClick="submeter"
        />



</LinearLayout>
</ScrollView>